# axelar-amplifier-stellar

./: .gitignore  .release-plz.toml  Cargo.toml  README.md  codecov.yml  optimize.sh  rust-toolchain.toml  stellar-release.md
.cargo/: config.toml
.github/scripts/: check-migration.sh
.github/workflows/: codecov.yaml  compile.yaml  compile_and_test.yaml  contract-storage-diff.yaml  create-release-pr.yaml  lint.yaml  pre-release.yaml  release-dry-run.yaml  release-manual.yaml  release-upload-to-r2.yaml  release.yaml  reusable-build.yaml  reusable-upload.yaml  stellar-expert-release.yml  test.yaml  upload-docs.yaml
contracts/stellar-axelar-example/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-axelar-example/src/: contract.rs  event.rs  interface.rs  storage.rs
contracts/stellar-axelar-example/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden
contracts/stellar-axelar-example/src/tests/: link_token.rs  mod.rs  test.rs
contracts/stellar-axelar-example/src/tests/testdata/: its_example.golden
contracts/stellar-axelar-gas-service/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-axelar-gas-service/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  testutils.rs
contracts/stellar-axelar-gateway/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-axelar-governance/: Cargo.toml
contracts/stellar-axelar-operators/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-axelar-operators/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  migrate.rs  storage.rs
contracts/stellar-axelar-operators/src/tests/: migrate.rs  test.rs  testutils.rs
contracts/stellar-custom-token-example/: Cargo.toml
contracts/stellar-custom-token-example/src/: contract.rs  lib.rs
contracts/stellar-custom-token-example/src/tests/: test.rs
contracts/stellar-governance/: Cargo.toml
contracts/stellar-governance/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  storage.rs  timelock.rs  types.rs
contracts/stellar-governance/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden
contracts/stellar-governance/src/tests/: execute.rs  mod.rs  test_governance.rs  testutils.rs
contracts/stellar-governance/src/tests/testdata/: approve_and_execute_operator_proposal_succeeds.golden  cancel_existing_proposal_succeeds.golden  cancel_proposal_succeeds.golden  execute_existing_proposal_succeeds.golden  execute_operator_proposal_by_non_operator_fails.golden  execute_operator_proposal_with_invalid_function_fails.golden  execute_proposal_insufficient_balance_fails.golden  execute_proposal_with_invalid_function_fails.golden  operator_proposal_approval_status_changes.golden  schedule_proposal_and_get_eta_succeeds.golden
contracts/stellar-interchain-token/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-interchain-token-service/: CHANGELOG.md  Cargo.toml  INTEGRATION.md  README.md
contracts/stellar-interchain-token/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  migrate.rs  storage.rs
contracts/stellar-interchain-token/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden
contracts/stellar-interchain-token/src/tests/: migrate.rs  mod.rs  test.rs  testutils.rs
contracts/stellar-interchain-token/src/tests/testdata/: add_minter_fails_minter_already_exists.golden  allowance_returns_zero_when_expired.golden  burn_from_succeeds.golden  burn_succeeds.golden  mint_from_succeeds.golden  mint_succeeds.golden  register_interchain_token.golden  remove_minter_fails_not_minter.golden  set_admin_emits_event.golden  stellar_interchain_token.optimized.wasm  transfer.golden  transfer_from_succeeds.golden
contracts/stellar-multicall/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-multicall/src/: contract.rs  error.rs  interface.rs  lib.rs  types.rs
contracts/stellar-multicall/src/tests/: bank_contract.rs  mod.rs  subscriber_contract.rs  test.rs
contracts/stellar-multicall/src/tests/testdata/: ensure_data_key_storage_schema_is_unchanged.golden  multicall_long_auth_chain_succeeds.golden  multicall_succeeds.golden
contracts/stellar-token-manager/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-token-utils/: CHANGELOG.md  Cargo.toml
contracts/stellar-token-utils/src/: contract.rs  error.rs  interface.rs  lib.rs  macro.rs
contracts/stellar-token-utils/src/tests/: mod.rs  test.rs  testutils.rs
contracts/stellar-token-utils/src/tests/testdata/: create_stellar_asset_contract_different_assets_and_issuers_succeed.golden  create_stellar_asset_contract_succeeds_with_different_assets_and_issuers.golden  create_stellar_asset_contract_succeeds_with_valid_xdr.golden  deploy_stellar_asset_contract_alphanum12.golden  deploy_stellar_asset_contract_alphanum4.golden  deploy_stellar_asset_contract_different_assets_succeed_and_address_derivation_unchanged.golden  deploy_stellar_asset_contract_same_asset_code_different_issuers_address_derivation_unchanged.golden  deploy_stellar_asset_contract_same_issuer_different_asset_code_address_derivation_unchanged.golden  deploy_stellar_asset_contract_succeeds_with_valid_xdr.golden
contracts/stellar-upgrader/: CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-upgrader/src/: contract.rs  error.rs  interface.rs  lib.rs  testutils.rs
contracts/stellar-upgrader/src/tests/: atomic_upgrades.rs  client.rs  mod.rs
contracts/stellar-upgrader/src/tests/testdata/: dummy_contract_after_upgrade.wasm
contracts/stellar-upgrader/src/tests/testdata/dummy-contract/: Cargo.toml
contracts/stellar-upgrader/src/tests/testdata/dummy-contract-after-upgrade/: CHANGELOG.md  Cargo.toml
contracts/stellar-upgrader/src/tests/testdata/dummy-contract-after-upgrade/src/: contract.rs  lib.rs
contracts/stellar-upgrader/src/tests/testdata/dummy-contract/src/: contract.rs
contracts/stellar-upgrader/src/tests/testdata/dummy-contract/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden
contracts/stellar-upgrader/src/tests/utils/: dummy_contract.rs  dummy_contract_after_upgrade.rs
stellar-token-utils/src/: contract.rs
(+139 files in other folders)
