[package]
name = "stellar-axelar-operators"
version = "2.0.0"
edition = { workspace = true }
description = "AxelarOperators contract, responsible for managing operators and enabling invoking functions with access control and upgradeability."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = [] # Only export the contract interface

[dependencies]
cfg-if = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
