[package]
name = "stellar-custom-token-example"
version = "1.0.0"
edition = { workspace = true }
description = "A simple custom token contract example."
license = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]
library = [] # Exports only the contract interface
testutils = ["stellar-axelar-std/testutils"]

[lints]
workspace = true
