[package]
name = "stellar-interchain-token"
version = "1.1.2"
edition = { workspace = true }
description = "InterchainToken contract, responsible for implementing an interchain token that is compatible with SEP-41."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]
library = [] # Exports only the contract interface
testutils = ["stellar-axelar-std/testutils"]

[lints]
workspace = true
