[package]
name = "stellar-multicall"
version = "1.0.2"
edition = { workspace = true }
description = "Multicall contract, responsible for executing multiple contract calls in a single transaction."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
stellar-axelar-std = { workspace = true, features = ["derive"] }

[dev-dependencies]
goldie = { workspace = true }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]
library = [] # Exports only the contract interface
testutils = ["stellar-axelar-std/testutils"]

[lints]
workspace = true
