[package]
name = "stellar-upgrader"
version = "1.1.1"
edition = { workspace = true }
description = "Upgrader contract, responsible for upgrading contracts and migrate data in an atomic transaction."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
dummy-contract = { path = "src/tests/testdata/dummy-contract" }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]
library = [] # Exports only the contract interface
testutils = ["stellar-axelar-std/testutils"]

[lints]
workspace = true
