[package]
name = "dummy-contract-after-upgrade"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-axelar-std = { workspace = true }

[dev-dependencies]
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]

[lints]
workspace = true
